Refactorice el servicio de cocina y el controlador para mejorar la gestión del menú y los platos.
- Firmas de métodos actualizadas para usar @RequestParam para mayor claridad
- Manejo de errores mejorado en la recuperación de menús y generación de platos.
- Legibilidad del código mejorada y coherencia en la denominación de variables.
- Se corrigió el nombre de la categoría en la enumeración ProductoCategory.
- Definición de OpenAPI actualizada para una mejor documentación de API